--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "webpack-dev-server"
+    "start": "./node_modules/webpack-dev-server/bin/webpack-dev-server.js",
+    "build": "NODE_ENV=production ./node_modules/webpack/bin/webpack.js"
   },
   "author": "",
   "license": "MIT",
@@ -18,17 +19,15 @@
     "babel-preset-react": "^6.5.0",
     "babel-preset-stage-0": "^6.5.0",
     "babel-register": "^6.5.2",
+    "copy-webpack-plugin": "^1.1.1",
     "react-transform-hmr": "^1.0.2",
     "style-loader": "^0.13.0",
     "webpack": "^1.12.2",
     "webpack-dev-server": "^1.12.1"
   },
   "dependencies": {
-    "bem-cn": "^1.2.1",
-    "classnames": "^2.2.3",
     "es6-object-assign": "^1.0.1",
     "is-equal": "^1.4.2",
-    "lodash": "^4.2.1",
     "react": "0.14.7",
     "react-dom": "0.14.7"
   }
